--- a/web.html
+++ b/web.html
@@ -27,17 +27,8 @@
 
             we believe that yoga is more than just a practice – it's a way of life. Our mission is
             to inspire individuals to embrace a healthier, happier, and more balanced lifestyle through the power of
-            yoga.
-
-        </p>
-        <button id="read-more-btn" onclick="showMore()">Read More</button>
-        <p class="moretext" style="display: none;"> Whether you’re a beginner taking your first steps into the world of
-            yoga or an experienced practitioner
-            looking for new insights, we’ve got something for everyone. From detailed pose tutorials and breathing
-            exercises to tips on meditation and self-care, we aim to make yoga accessible and enjoyable for all.
-
-            Join us as we explore the art of yoga and embark on a path toward inner peace and well-being. Let’s grow,
-            stretch, and flow – one pose at a time!</p>
+            yoga.Join us as we explore the art of yoga and embark on a path toward inner peace and well-being. Let’s grow,
+            stretch, and flow one pose at a time!</p>
     </div>
     <div class="courses">
         <h2>courses</h2>
@@ -85,22 +76,6 @@
     </footer>
     <script>
         alert("welcome to peacefulpath !!");
-
-function showMore() {
-    const readMore = document.getElementById("read-more-btn");
-    const moreText = document.querySelector(".moretext");
-
-    if (moreText.style.display === "none" || moreText.style.display === "") {
-        moreText.style.display = "block";
-        readMore.textContent = "Read Less";
-        console.log("Showing more text");
-    } else {
-        moreText.style.display = "none";
-        readMore.textContent = "Read More";
-        console.log("Hiding more text");
-    }
-}
-
     </script>
 </body>
 
